eks/helm/elastic-stack/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: logs-ingress
  namespace: kube-system
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - logs.parity.evise-nonprod.com
    secretName: jenkins-cert # < cert-manager will store the created certificate in this secret.
  rules:
    - host: logs.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: elastic-stack-kibana
              servicePort: 443
            path: /
