eks/helm/elastic-stack/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kibana-ingress
  namespace: mgmt
spec:
  tls: 
  - hosts:
    - logs.goevex.com
    secretName: kibana-cert 
  rules:
    - host: logs.goevex.com
      http:
        paths:
          - backend:
              serviceName: elastic-stack-kibana
              servicePort: 443
            path: /
